--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 START_DATE=2025-06-12
 END_DATE=2025-12-31
 
-# Commit Settings
+# Commit Sgit initgit initettings
 MIN_COMMITS_PER_DAY=1
 MAX_COMMITS_PER_DAY=15
 SKIP_PROBABILITY=0.15
