--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,12 @@
 # ═══════════════════════════════════════════════════════════════════════════
 
 # Date Range (YYYY-MM-DD format)
-START_DATE=2025-06-12
-END_DATE=2025-12-31
+START_DATE=
+END_DATE=
 
 # Commit Sgit initgit initettings
-MIN_COMMITS_PER_DAY=1
-MAX_COMMITS_PER_DAY=15
+MIN_COMMITS_PER_DAY=
+MAX_COMMITS_PER_DAY=
 SKIP_PROBABILITY=0.15
 
 # Git Settings
